--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -7,6 +7,7 @@ framework:
         storage_id: session.storage.mock_file
     profiler:
         collect: false
+    csrf_protection: false
 
 web_profiler:
     toolbar: false
